--- a/RPi-youtube/manifest.json
+++ b/RPi-youtube/manifest.json
@@ -16,5 +16,7 @@
   "permissions": [
     "tabs",
     "nativeMessaging"
-  ]
+  ],
+  "icons": {"48": "icon_48.png",
+          "128": "icon_128.png" }
 }
