Add browser_action to manifest
Former-commit-id: 62cc6f781c8cf0c3632e92f7f275164a0266fd1b

--- a/RPi-youtube/manifest.json
+++ b/RPi-youtube/manifest.json
@@ -3,6 +3,10 @@
   "name": "RPi-youtube",
   "description": "This extension runs youtube videos in chromium through omxplayer allowing a much smoother viewing",
   "version": "0.2",
+  "browser_action": {
+      "default_icon": "icon_38.png",
+      "default_title": "Extract video!"
+  },
   "content_scripts": [
     {
       "matches": ["*://*.youtube.com/watch*"],
