--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,4 @@ language: python
 python:
   - "2.6"
   - "2.7"
-script: py.test native/test_run_omxplayer.py
+script: py.test -s native/test_run_omxplayer.py
