--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,9 @@ language: python
 python:
   - "2.6"
   - "2.7"
-script: py.test -s native/test_run_omxplayer.py
+install:
+  - pip install coveralls
+script: coverage run py.test -s native/test_run_omxplayer.py
 sudo: required
+after_success:
+  - coveralls
