--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,5 @@ language: python
 python:
   - "2.6"
   - "2.7"
-install:
-  - pip install coveralls
-script: coverage run py.test -s native/test_run_omxplayer.py
+script: py.test -s native/test_run_omxplayer.py
 sudo: required
-after_success:
-  - coveralls
